force-app/main/default/objects/Project_Member__c/Project_Member__c.object-meta.xml
<CustomObject>
    <label>Project Member</label>
    <nameField>
        <displayFormat>PM-{00000}</displayFormat>
        <label>Project Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>