force-app/main/default/objects/Project_Member__c/fields/Member_Role__c.field-meta.xml
<CustomField>
    <fullName>Member_Role__c</fullName>
    <label>Member Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>Administrator</fullName>
            </value>
            <value>
                <fullName>App Builder</fullName>
            </value>
            <value>
                <fullName>Architect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>