force-app/main/default/objects/Project_Member__c/fields/Project_Lead__c.field-meta.xml
<CustomField>
    <fullName>Project_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Project Lead</label>
    <type>Checkbox</type>
</CustomField>